--- a/test1/pom.xml
+++ b/test1/pom.xml
@@ -208,6 +208,20 @@
       <artifactId>maven-clean-plugin</artifactId>
       <version>2.5</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+    <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.10</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>springtest</finalName>
