--- a/test1/src/main/webapp/WEB-INF/web.xml
+++ b/test1/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xmlns:web="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
-  <!-- spring的配置文件-->
+  <!-- 加载spring容器 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
   <!--  <param-value>classpath:spring/applicationContext-bean.xml</param-value>-->
@@ -14,11 +14,12 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
-  <!-- spring mvc核心：分发servlet -->
+  <!-- springmvc前端控制器 -->
   <servlet>
     <servlet-name>mvc-dispatcher</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <!-- spring mvc的配置文件 -->
+    <!-- contextConfigLocation配置springmvc加载的配置文件（配置处理器映射器、适配器等等）
+         如果不配置contextConfigLocation，默认加载的是/WEB-INF/servlet名称-serlvet.xml（springmvc-servlet.xml） -->
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:spring/spring-mvc.xml</param-value>
@@ -27,6 +28,11 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>mvc-dispatcher</servlet-name>
+     <!-- 第一种：*.action，访问以.action结尾 由DispatcherServlet进行解析
+         第二种：/，所以访问的地址都由DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析
+                  使用此种方式可以实现 RESTful风格的url
+       第三种：/*，这样配置不对，使用这种配置，最终要转发到一个jsp页面时， 仍然会由DispatcherServlet解析jsp地址，
+                不能根据jsp页面找到handler，会报错。 -->
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
